#CTM-4258 fix the checkbox text wrapping problem. (#554)

--- a/src/main/webapp/bundles/health_v5/less/results/filters.less
+++ b/src/main/webapp/bundles/health_v5/less/results/filters.less
@@ -26,6 +26,9 @@
   .checkbox {
     padding-top: 10px;
     color: @theme-tertiary;
+    input + label:before {
+      margin-right: 10px;
+    }
   }
 
   .filter-by-container {
